# MMOCore

./: mmoconfig.ini  mmokillserver.sh  mmorestarter.sh  mmoupdater.sh  mmowatcher.sh
addition/: characters_guildhouse_vendor.sql  world_buff.sql  world_class_trainer.sql  world_command_namego.sql  world_customizer.sql
addition/battlegrounds/: world_Grizzly_Hills Pvp.sql  world_Isle_of_Conquest.sql
addition/instance/: world_ahun.sql  world_hor.sql  world_icc_gunship.sql
addition/instances/: world_Ahnkahet.sql  world_CrusaderColiseum.sql  world_CullingOfStratholme.sql  world_DrakTharon.sql  world_EyeOfEternity.sql  world_HallsOfLightning.sql  world_HallsOfReflection.sql  world_IcecrownCitadel-TrinityCore-Merge.sql  world_IcecrownCitadel.sql  world_Nexus.sql  world_Ocolus.sql  world_PitOfSaron.sql  world_TrialChampion.sql  world_Ulduar.sql
addition/mmowning/: auth_vipaccount.sql  characters_guildhouse_vendor.sql  characters_mail_external.sql  world_anticheat_ban_for_1_hour.sql  world_event.sql  world_gamble.sql  world_gunship_battle_loot_workaround.sql  world_legion_master.sql  world_lottery.sql  world_mall.sql  world_quest_1_80030_to_80080.sql  world_script_npc.sql  world_vip_account_command.sql
addition/quests/: world_questfix_argent_tournament.sql  world_questfix_escape_from_skettis.sql  (+6 more)
cmake/: options.cmake  showoptions.cmake
doc/: README.Passive.Anticheat.txt
sql/: CMakeLists.txt
src/server/game/TriniChat/: CMakeLists.txt  IRCClient.cpp  IRCClient.h  IRCCmd.cpp  IRCCmd.h  IRCCmde.cpp  IRCFunc.h  IRCIO.cpp  IRCLog.cpp  IRCSock.cpp  MCS_OnlinePlayers.cpp
(+493 files in other folders)
